overlapping issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -5274,7 +5274,7 @@ a:hover {
   width: 100%;
   margin: 0 auto;
   position: absolute;
-  z-index: 9999;
+  z-index: 9997;
   overflow: hidden;
   left: 0;
   width: 298px;
